syntax = "proto3";

package package_scanner;
option go_package = "github.com/deepfence/agent-plugin-grpc/proto";

service PackageScanner {
  rpc GenerateSBOM(SBOMRequest) returns (SBOMResult);
}

message SBOMRequest {
  string source = 1;
  string scan_type = 2;
  string container_name = 3;
  string kubernetes_cluster_name = 4;
  string image_id = 5;
  string scan_id = 6;
  string node_type = 7;
  string host_name = 8;
  string registry_id = 9;
  string container_id = 10;
  string image_name = 11;
}

message SBOMResult {
  string sbom = 1;
}
